@@ -146,6 +146,8 @@ constant(name=Nullch)
 	PG_TSQUERYARRAY      = 3645
 	PG_TSVECTOR          = 3614
 	PG_TSVECTORARRAY     = 3643
+	PG_TXID_SNAPSHOT     = 2970
+	PG_TXID_SNAPSHOTARRAY = 2949
 	PG_UNKNOWN           = 705
 	PG_UUID              = 2950
 	PG_UUIDARRAY         = 2951
